<resources>
    <string name="app_name">Filmes Populares</string>

    <string name="activity_detail_title">Detalhes</string>
    <string name="title_activity_settings">Configurações</string>

    <string name="label_data_lancamento">Lançamento</string>
    <string name="label_media_voto">Avaliação</string>
    <string name="label_trailers">Trailers</string>
    <string name="label_reviews">Revisões</string>

    <string name="menu_atualizar">Atualizar</string>
    <string name="menu_classificacao">Classificação</string>
    <string name="menu_por_popularidade">por Popularidade</string>
    <string name="menu_por_avaliacao">por Avaliação</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="pref_classificacao_label" translatable="false">Classificação</string>

    <!--Valores que serão exibidos no combo para o usuário selecionar-->
    <string-array name="pref_classificacao_entries">
        <item>por Popularidade</item>
        <item>por Avaliação</item>
        <item>Favoritos</item>
    </string-array>

    <!--Valores a serem armazenados após o usuário selecionar o item-->
    <string-array name="pref_classificacao_values">
        <item>popular</item>
        <item>top_rated</item>
        <item>favorite</item>
    </string-array>

    <string name="formato_data">MM/yyyy</string>

    <string name="msg_erro_conexao">Verifique sua conexão com a Internet</string>
    <string name="msg_nenhum_item">Não há itens a serem exibidos para essa classificação</string>
    <string name="msg_atualizado">Filmes atualizados ;)</string>
    <string name="acao_atualizar">Atualizar</string>
</resources>
